# zd-tree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/nearestNeighbors/CKNN/: neighbors.h
benchmarks/nearestNeighbors/STANN/include/: sfcnn.hpp
benchmarks/nearestNeighbors/bench/: Makefile  neighborsTime.C  neighborsTimeCKNN.C  testFramework.h
benchmarks/nearestNeighbors/bench/utils/: papi.h  random_generator.h
benchmarks/nearestNeighbors/cgalnew/: neighbors.h
benchmarks/nearestNeighbors/octTree/: .neighbors.h.swp  k_nearest_neighbors.h  neighbors.h  oct_tree.h  qknn.hpp
common/: geometry.h  parallelDefs  time_loop.h
